<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taller_clase.principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/zapatos"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/genero"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/cbxGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="18sp"
            android:typeface="serif" />

        <Spinner
            android:id="@+id/cbxTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/marca"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/cbxmarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:onClick="Calcular"
            android:text="@string/agregar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/numero"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/Total_Pagar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblresultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:onClick="Terminar"
            android:text="@string/terminar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
